maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:7: error: not found: value rand
    if(rand==0){
       ^RandomMouseMaze:15: error: not found: value rand
      if(rand==0){gauche()}
         ^RandomMouseMaze:16: error: not found: value rand
      else if(rand==1){droite()}
              ^